force-app/main/default/objects/Components__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Criação</fullName>
            </value>
            <value>
                <fullName>Alteração</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>