force-app/main/default/objects/Components__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alerta por Email do fluxo de trabalho</fullName>
            </value>
            <value>
                <fullName>Aplicativos</fullName>
            </value>
            <value>
                <fullName>Atualização de Campo do Fluxo de Trabalho</fullName>
            </value>
            <value>
                <fullName>Botão ou Link</fullName>
            </value>
            <value>
                <fullName>Campo personalizado</fullName>
            </value>
            <value>
                <fullName>Classes Apex</fullName>
            </value>
            <value>
                <fullName>Componente de VisualForce</fullName>
            </value>
            <value>
                <fullName>Componentes da home page</fullName>
            </value>
            <value>
                <fullName>Definição da configuração personalizada</fullName>
            </value>
            <value>
                <fullName>Fila</fullName>
            </value>
            <value>
                <fullName>Grupo Público</fullName>
            </value>
            <value>
                <fullName>Guias</fullName>
            </value>
            <value>
                <fullName>Layout Página</fullName>
            </value>
            <value>
                <fullName>Layouts da Home Page</fullName>
            </value>
            <value>
                <fullName>Marco</fullName>
            </value>
            <value>
                <fullName>Modelo de Email</fullName>
            </value>
            <value>
                <fullName>Modo de Exibição de Lista</fullName>
            </value>
            <value>
                <fullName>Objeto personalizado</fullName>
            </value>
            <value>
                <fullName>Páginas Visual Force</fullName>
            </value>
            <value>
                <fullName>Painel</fullName>
            </value>
            <value>
                <fullName>Papel</fullName>
            </value>
            <value>
                <fullName>Papel Timbrado</fullName>
            </value>
            <value>
                <fullName>Pasta</fullName>
            </value>
            <value>
                <fullName>Perfil</fullName>
            </value>
            <value>
                <fullName>Processo Comercial</fullName>
            </value>
            <value>
                <fullName>Processo de Habilitação</fullName>
            </value>
            <value>
                <fullName>Processos de Aprovação</fullName>
            </value>
            <value>
                <fullName>Recursos estáticos</fullName>
            </value>
            <value>
                <fullName>Regra de Fluxo de Trabalho</fullName>
            </value>
            <value>
                <fullName>Regras de Compartilhamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>