force-app/main/default/objects/Components__c/fields/Develop_Task__c.field-meta.xml
<CustomField>
    <fullName>Develop_Task__c</fullName>
    <label>Develop Task</label>
    <referenceTo>Develop_Task__c</referenceTo>
    <relationshipLabel>Componentes</relationshipLabel>
    <relationshipName>Componentes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>