force-app/main/default/objects/Components__c/fields/TestClass__c.field-meta.xml
<CustomField>
    <fullName>TestClass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Test class related to the component.</description>
    <inlineHelpText>If you create a Class/Trigger component, please indicate the test class related to it.</inlineHelpText>
    <label>Test Class</label>
    <referenceTo>Components__c</referenceTo>
    <relationshipLabel>Related Components</relationshipLabel>
    <relationshipName>Componentes</relationshipName>
    <type>Lookup</type>
</CustomField>