force-app/main/default/objects/Components__c/listViews/Componentes_sem_Classe_de_Teste.listView-meta.xml
<ListView>
    <fullName>Componentes_sem_Classe_de_Teste</fullName>
    <columns>NAME</columns>
    <columns>Action_Type__c</columns>
    <columns>Component_Type__c</columns>
    <columns>API__c</columns>
    <columns>TestClass__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>Classes Apex,Triggers</value>
    </filters>
    <filters>
        <field>TestClass__c</field>
        <operation>equals</operation>
    </filters>
    <label>Componentes sem Classe de Teste</label>
</ListView>